<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginHorizontal="12dp"
    android:layout_marginVertical="8dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
<androidx.constraintlayout.widget.ConstraintLayout
android:layout_width="match_parent"
android:layout_height="wrap_content"
    android:padding="12dp">

    <TextView
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:textStyle="bold"/>
    <TextView
        android:layout_marginTop="12dp"
        android:id="@+id/gender_label"
        android:layout_width="0dp"
        android:textColor="@color/black"
        android:text="@string/gender"
        android:textAllCaps="true"
        android:textSize="12sp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/name"
        app:layout_constraintEnd_toStartOf="@+id/dob"
        app:layout_constraintStart_toStartOf="parent"/>
    <TextView
        android:id="@+id/dob_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:text="@string/date_of_birth"
        android:textSize="12sp"
        android:textAllCaps="true"
        app:layout_constraintTop_toTopOf="@+id/gender_label"
        app:layout_constraintEnd_toStartOf="@+id/createdDate"
        app:layout_constraintStart_toEndOf="@+id/gender_label"/>
    <TextView
        android:id="@+id/createdDate_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:text="@string/created_on"
        android:textSize="12sp"
        android:textAllCaps="true"
        app:layout_constraintTop_toTopOf="@+id/gender_label"
        app:layout_constraintStart_toEndOf="@+id/dob"
        app:layout_constraintEnd_toEndOf="parent"/>


    <TextView
        android:id="@+id/gender"
        android:layout_marginTop="8dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/gender_label"
        app:layout_constraintEnd_toStartOf="@+id/dob"
        app:layout_constraintStart_toStartOf="parent"/>
    <TextView
        android:id="@+id/dob"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@+id/gender"
        app:layout_constraintEnd_toStartOf="@+id/createdDate"
        app:layout_constraintStart_toEndOf="@+id/gender"/>
    <TextView
        android:id="@+id/createdDate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@+id/gender"
        app:layout_constraintStart_toEndOf="@+id/dob"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/editAction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:text="@string/edit"
        android:textAllCaps="true"
        android:gravity="center"
        android:padding="8dp"
        android:textColor="@color/purple_500"
        app:layout_constraintTop_toBottomOf="@+id/gender"
        app:layout_constraintEnd_toStartOf="@+id/deleteAction"/>
    <TextView
        android:layout_margin="12dp"
        android:padding="8dp"
        android:id="@+id/deleteAction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete"
        android:textAllCaps="true"
        android:gravity="center"
        android:textColor="#F44336"
        app:layout_constraintTop_toBottomOf="@+id/gender"
        app:layout_constraintEnd_toEndOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>